<resources>
    <string name="app_name">Credential Manager</string>
    <string name="add_category">Add category</string>
    <string name="add_credential">Add credential</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="URL" translatable="false">URL</string>
    <string name="comment">Comment</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="categories_fragment">Categories</string>
    <string name="credentials_fragment">Credentials</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_credential">Edit credential</string>
    <string name="required">Required</string>
    <string name="unlock">Unlock</string>
    <string name="master_password">Master Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email">Email</string>
    <string name="url_format">URL not formated right</string>
    <string name="email_format">Email not formated right</string>
    <string name="logout">Logout</string>
    <string name="password_missmatch">Password missmatch</string>
    <string name="wrong_password">Wrong password</string>
</resources>
